# Nexus

./: .gitignore  CURRENT_STATE.md  HANDOVER.md  LICENSE  NEXUS_Masterplan.md  QS_FINDINGS.md  README.md  nexus-android-qa.skill  nexus-orchestrator.skill  nexus-rust-qa.skill  setup_github.sh
.github/: release-template.md
.github/workflows/: ci.yml  release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/vibecode/nexus/: MainActivity.kt
android/app/src/main/java/com/vibecode/nexus/data/: ConnectionSettings.kt  NexusApiClient.kt
android/app/src/main/java/com/vibecode/nexus/data/model/: BrainDump.kt  Project.kt  Task.kt
android/app/src/main/java/com/vibecode/nexus/speech/: SpeechRecognizerManager.kt
android/app/src/main/java/com/vibecode/nexus/ui/screen/: BrainDumpHistoryScreen.kt  BrainDumpScreen.kt  PairScreen.kt  PairingActions.kt  ProjectsScreen.kt  SettingsScreen.kt  (+3 more)
android/app/src/main/res/values/: colors.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
android/gradle/: libs.versions.toml
core/: Cargo.toml  install-service.sh  nexus-core.service  nexus-launcher.sh
core/migrations/: 20260412_001_braindump.sql  20260413_001_projects.sql  20260414_001_tasks.sql  20260415_001_gamification.sql
core/src/: auth.rs  cli.rs  config.rs  db.rs  handlers.rs  keystore.rs  main.rs  models.rs  oauth.rs  repo.rs
core/src/llm/: claude.rs  gemini.rs  mod.rs  ollama.rs  openai_compatible.rs  zai.rs
core/tests/: llm_integration.rs
desktop/: package.json
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: README.md
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md
scripts/: bump-version.sh
(+1 files in other folders)
