[package]
name = "nexus-core"
version = "0.1.0"
edition = "2021"
description = "NEXUS Personal ADHS-OS — Core Daemon"
authors = ["Kai Krauthausen <c0nn3tor@googlemail.com>"]
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4"] }
keyring = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
