[package]
name = "nexus-core"
version = "0.1.0"
edition = "2021"
description = "NEXUS Personal ADHS-OS — Core Daemon"
authors = ["Kai Krauthausen <c0nn3tor@googlemail.com>"]
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4"] }
keyring = "3"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-trait = "0.1"
rand = "0.9"
base64 = "0.22"
qrcode = { version = "0.14", default-features = false }
local-ip-address = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
