[package]
name = "nexus-desktop"
version = "0.1.0"
edition = "2021"
description = "NEXUS Desktop Dashboard - Tauri client for the NEXUS core server"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
